# ipd

./: .gitignore  .gitmodules  README.md  setup.md  style.md
hw/: test-c-program.rkt
hw/01/: README.md  animal.rkt  functions.rkt  lorenz.rkt  setup-start-here.rkt  sliding-text-window.rkt  traffic-light.rkt
hw/02/: alpaca-genealogy.rkt  falling.rkt  list.rkt
hw/03/: aa.rkt  abstraction.rkt  alpaca-genealogy.rkt
hw/04/: falling-extensions.rkt  sorting.rkt
hw/05/: streams.rkt
hw/06/: CMakeLists.txt  README.md
hw/06/hw-scratch/tests/: CMakeLists.txt  union_find.cpp
hw/06/src/: Union_find.h  WU_graph.cpp  mst.cpp  mst.h
hw/06/test/: graph_test.cpp  mst_test.cpp
hw/07/: CMakeLists.txt  README.md
hw/07/src/: hexapawn.cpp
hw/08/: CMakeLists.txt  README.md
hw/08/src/: 7coder.cpp  7coder.h  bit_io.cpp  bit_io.h  common.h  decode.cpp  encode.cpp
hw/08/test-files/: bit_io.h
hw/1/: sliding-text-window.rkt  traffic-light.rkt
hw/fp/: README.md
hws/1/: functions.rkt  lorenz.rkt  sliding-text-window.rkt  traffic-light.rkt
hws/6/desc/: hw6.scrbl
hws/7/: .gitignore
lectures/: 2015-10-27.rkt  README.md  lec01a.txt  lec01b.txt  lec01c.rkt  lec01d.rkt  lec02a.rkt  lec02b.rkt  lec03a.txt  lec03c.txt  lec03x.rkt  lec04a.txt  lec04b.txt  lec04c.txt  lec05-avl.rkt  lec05-worst-case.rkt  lec05a.rkt  lec05a.txt  lec05b.rkt  lec05c.txt  lec06a.txt  lec06b.txt  lec06c-starter.rkt  lec06c.rkt  lec07-binomial-heap.rkt  lec07a.txt  lec07b.rkt  lec07b.txt  lec07c.txt  lec08a.rkt  lec08a.txt  lec08b.rkt  lec08b.txt  lec08c.rkt  lec08c.txt  lec09a-timing.rkt  lec09a.rkt  lec09b-timing-data.rktd  lec09b-timing.rkt  lec09b.rkt  (+9 more)
lectures/2015-09-29/: outline.rkt
lectures/2015-10-02/: ft-notes.rkt
lectures/2015-10-06/: adts.rkt  bench.rkt
lectures/2015-10-09/: lon-analysis.rkt
lectures/2015-10-13/: avl-actual.rkt  avl-plan.rkt
lectures/2015-10-16/: avl-actual.rkt  dirs.rkt
lectures/2015-10-20/: generative.rkt  sssp.rkt
lectures/2015-10-24/: djik-notes.rkt
lectures/2015-11-03/: .clang-format  .gitignore  CMakeLists.txt
lectures/2015-11-03/src/: CMakeLists.txt
lectures/2015-11-03/src/codeword/: CMakeLists.txt  codeword.cpp  codeword.hpp
lectures/2015-11-03/src/codeword_class/: CMakeLists.txt  codeword.hpp
lectures/2015-11-03/src/codeword_struct/: CMakeLists.txt  codeword.cpp  codeword.hpp
lectures/2015-11-03/src/rational/: CMakeLists.txt  rational.cpp  rational.hpp
lectures/2015-11-03/tests/: CMakeLists.txt  codeword.cpp  codeword_struct.cpp  rational.cpp
lectures/2015-11-06/: CMakeLists.txt
lectures/2015-11-13/: .gitignore
lectures/2015-11-17/: CMakeLists.txt
lectures/2015-11-24/: .gitignore
lectures/2015-9-25/: problems.scrbl
lectures/2015/2015-11-20/tests/: CMakeLists.txt  linked_structures.cpp  lru_cache.cpp
lectures/2016/: lec01b.txt  lec02c.rkt  lec03b.txt  lec03c.txt  lec04a.txt  lec05-avl.rkt  lec05b.txt  lec05c.txt  lec06-avl.rkt  lec06-test.rkt  lec06a.txt  lec06c-rndbst.rkt  lec06c.rkt  lec07-binomial-heap-acc.rkt  lec07-binomial-heap.rkt  lec07b.txt  lec07c.txt  lec08a.txt  lec08c.txt  lec10a.rkt  lec10b.rkt  provide.rkt
lectures/c++-template/: CMakeLists.txt
lectures/lec1/: circle-square.rkt  ex1.rkt  intro.rkt  slides.rkt
lectures/lec12/: CMakeLists.txt  README.md
lectures/lec13/: CMakeLists.txt  README.md
lectures/lec14/: CMakeLists.txt  README.md
lectures/lec14-actual/: CMakeLists.txt
lectures/lec15/: CMakeLists.txt  README.md  avalance-matrix.rkt
lectures/lec16/: CMakeLists.txt  README.md
lectures/lec17/: CMakeLists.txt  README.md
lectures/lec18/: CMakeLists.txt
lectures/lec19/: CMakeLists.txt  README.md
lectures/lec19/.ipd/: CMakeLists.txt
lectures/lec19/.ipd/lib/graphics/: color.cpp  color.h
lectures/lec19/src/: Background.cpp  Background.h  Difference.cpp  Drawing.h  Fill.cpp  Fill.h  Gradient.cpp  Gradient.h  Picture.cpp  Picture.h  Picture_decorator.cpp  Picture_decorator.h  drawings.cpp  drawings.h  gradients.cpp  gradients.h  pictures.cpp  pictures.h  render.cpp  render.h
lectures/lec19/test/: circles.cpp
lectures/lec20/: CMakeLists.txt  deps.txt
lectures/ring-buffer/: CMakeLists.txt
(+301 files in other folders)
